@@ -10,8 +10,8 @@
 <% @users.each do |user| %>
   <tr>
     <td><%=h user.name %></td>
-    <td><%=h user.state %></td>
-    <td><%=h user.access_state %></td>
+    <td><%=h user.human_state_name %></td>
+    <td><%=h user.human_access_state_name %></td>
     <td><%= link_to 'Show', resource(user) %></td>
     <td><%= link_to 'Edit', resource(user, :edit) %></td>
   </tr>
