@@ -5,12 +5,12 @@
 
 <p>
   <b>State:</b>
-  <%=h @user.state %>
+  <%=h @user.human_state_name %>
 </p>
 
 <p>
   <b>Access State:</b>
-  <%=h @user.access_state %>
+  <%=h @user.human_access_state_name %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
